--- a/sass/core/_reset.scss
+++ b/sass/core/_reset.scss
@@ -10,8 +10,8 @@ object,
 iframe,
 h1,
 h2,
+h2,
 h3,
-h4,
 h5,
 h6,
 p,
@@ -132,14 +132,14 @@ a {
 h1 {
   font-size: 45px;
 }
-h3 {
+h2 {
   font-size: 40px;
 }
 h1,
-h3 {
-  font-weight: bold;
+h2 {
+  font-weight: 700;
 }
-h4 {
+h3 {
   font-size: 26px;
 }
 hr {
