--- a/sass/core/_typography.scss
+++ b/sass/core/_typography.scss
@@ -6,5 +6,5 @@
 @font-face {
   font-family: Metropolis;
   src: url(assets/font/Metropolis-Bold.otf);
-  font-weight: bold;
+  font-weight: 700;
 }
