--- a/sass/abscracts/_variables.scss
+++ b/sass/abscracts/_variables.scss
@@ -1,24 +1,30 @@
 // COLORS
 $primary-text-color: #2f2d2d;
 $secondary-text-color: #ffffff;
-$header-nav-btn: #7f83ff;
-$header-nav-text: #434343;
-$hero-btn: #4a4edd;
-$warp-border: rgba(164, 164, 164, 0.329764);
-$light-blue: #7796fe;
-$circle-red: rgba(253, 94, 94, 0.2);
-$circle-green: rgba(73, 166, 82, 0.2);
-$card-blue: #7796fe;
-$card-orange: rgba(255, 134, 91, 1);
-$circle-pink: #fb1488;
-$circle-sky-blue: rgba(3, 211, 226, 0.2);
-$circle-purpel: rgba(19, 2, 66, 0.2);
-$card-purple: #8937dc;
-$card-green: #7cca84;
-$input-background: rgba(216, 216, 216, 0.39);
-$purple: #130242;
-$hr-line: rgba(188, 208, 229, 0.496913);
-$footer-link: #2f281e;
-$facebook-blue: #4267b2;
-$instagram-pink: #df0142;
-$twitter-blue: #1da1f2;
+$color-violets: #7f83ff;
+$color-arsenic: #434343;
+$color-iris: #4a4edd;
+$color-opacity-quick-silver: rgba(164, 164, 164, 0.3);
+$color-opacity-cornflower-blue: rgba(119, 150, 254, 0.2);
+$color-cornflower-blue: #7796fe;
+$color-opacity-sunset-orange: rgba(253, 94, 94, 0.2);
+$color-sunset-orange: #fd5e5e;
+$color-opacity-middle-green: rgba(73, 166, 82, 0.2);
+$color-middle-green: #49a652;
+//conflower-blue
+$color-coral: #ff865b;
+$color-opacity-philippine-pink: rgba(251, 20, 136, 0.2);
+$color-philippine-pink: #fb1488;
+$color-opacity-dark-turquoise: rgba(3, 211, 226, 0.2);
+$color-dark-turquoise: #03d3e2;
+$color-opacity-cetacean-blue: rgba(19, 2, 66, 0.2);
+//cetacean-blue
+$color-blue-violet: #8937dc;
+$color-iguana-green: #7cca84;
+$color-opacity-ight-silver: rgba(216, 216, 216, 0.4);
+$color-cetacean-blue: #130242;
+$color-opacity-beau-blue: rgba(188, 208, 229, 0.4);
+$color-pine-tree: #2f281e;
+$color-blue-yonder: #4267b2;
+$color-carmine: #df0142;
+$color-button-blue: #1da1f2;
