--- a/sass/sections/_hire-warp.scss
+++ b/sass/sections/_hire-warp.scss
@@ -30,7 +30,7 @@
   clip-path: path(
     "M0.0293706 21.0294C0.0131563 9.41993 9.41992 0 21.0294 0H728.117C740.782 0 750.565 11.1262 748.944 23.6867L715.555 282.518L23.6719 355.554C11.2823 356.862 0.484857 347.158 0.467457 334.699L0.0293706 21.0294Z"
   );
-  background-color: $card-blue;
+  background-color: $color-cornflower-blue;
   padding: 49px 0 98px 56px;
   width: 750px;
   height: 356px;
@@ -103,7 +103,7 @@
   clip-path: path(
     "M78 93.165L681.968 0.532488C694.08 -1.32522 705 8.04735 705 20.3013V503C705 514.046 696.046 523 685 523H20.1761C7.62763 523 -1.82108 511.578 0.530394 499.252L78 93.165Z"
   );
-  background-color: $card-orange;
+  background-color: $color-coral;
   padding: 153px 0 87px 122px;
   width: 709px;
   height: 523px;
